--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,6 +3,7 @@
 /* Main styling */
 html {
     font-size: 110%;
+    font-weight: 200;
 }
 
 html,
@@ -12,9 +13,9 @@ body {
 }
 
 body {
-    color: #423e3a;
+    color: #b43044;
     font-family: "Montserrat", sans-serif;
-    font-size: 1rem;
+    font-size: 1.2rem;
     font-weight: 300;
     line-height: 1.5;
 }
@@ -24,9 +25,10 @@ p {
 }
 
 #main-btn {
-    border: rgb(100, 76, 68) solid 1px;
+    border: rgb(176, 76, 42) solid 2.4px;
     font-family: "Montserrat", sans-serif;
-    font-size: 0.85rem;
+    font-size: 1rem;
+    font-weight: bold;
     padding: 0.6rem 1.8rem;
     border-radius: 5px;
 }
@@ -63,9 +65,10 @@ h1 {
 }
 
 #name {
-    font-size: 5.3rem;
+    font-size: 6rem;
+    font-style: normal;
     margin-top: 3rem;
-    color: rgb(137, 65, 37);
+    color: rgb(96, 30, 57);
     font-weight: 500;
     padding-bottom: 0.8rem;
 }
@@ -75,7 +78,8 @@ h1 {
     color: rgb(128, 136, 255);
     margin-bottom: 1.5rem;
     font-weight: 500;
-    font-weight: lighter;
+    font-weight: bolder;
+    font-family: monospace;
 }
 
 #noun {
@@ -85,7 +89,8 @@ h1 {
 
 #definition {
     padding-bottom: 1rem;
-    font-size: 1.2rem;
+    font-weight: bolder;
+    font-size: 1.5rem;
     width: 33rem;
     margin: 0 auto;
     padding-bottom: 2rem;
@@ -293,9 +298,10 @@ hr {
 #button-3,
 #button-4 {
     text-decoration: none;
-    border: rgb(151, 255, 255) solid 3px;
+    border: rgb(163, 151, 255) solid 4px;
     font-family: "Montserrat", sans-serif;
-    font-size: 0.95rem;
+    font-size: 1.2rem;
+    font-weight: bold;
     border-radius: 5px;
     color: rgb(255, 151, 151);
     padding: 0.5rem 1.5rem;
